# example-R2PY

./: .gitignore  README.md  pyproject.toml
interflex/: __init__.py  _typing.py  core.py  effects.py  fwl.py  linear.py  plotting.py  predict.py  result.py  uniform.py  variance.py  vcov.py
tests/: conftest.py  test_ate.py  test_differences.py  test_edge_cases.py  test_fwl.py  test_input_validation.py  test_linear_continuous.py  test_linear_discrete.py  test_matrix.py  test_plotting.py  test_predict.py  test_result_structure.py  test_uniform.py  test_variance.py  test_vcov.py
